QR code fix
